# buyplus1-helper

./: .gitignore  README.md  daily_duties.md  generate_timecard.py  issues.md  pixi.toml  pyproject.toml  service_log.csv
.claude/: spec.md
data/: timecard_master.csv
references/plans/: llm-extractor-one-session-per-day.md
references/progress/: 2026-03-28.md
references/reports/: generate_plots.py
references/timecard/: chat-history-20260323.txt
src/buyplus1_helper/: __init__.py  cli.py  extractor.py  llm_extractor.py  llm_validator.py  models.py  parser.py  timecard.py
tests/: test_extractor.py  test_llm_extractor.py  test_llm_validator.py  test_parser.py  test_timecard.py
tests/fixtures/: sample_chat.txt
