[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buyplus1-helper"
version = "0.1.0"
description = "Tools to assist buyplus1 team operations"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "rich>=13",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
timecard = "buyplus1_helper.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/buyplus1_helper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
